fix: improve navbar layout and responsiveness, adjust padding and alignment for better visual consistency

--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,9 @@ body {
 }
 .navbar__logo {
   cursor: pointer;
-  padding: 12px 12px;
+  padding: 12px 6px;
+  display: flex;
+  justify-content: center;
 }
 .navbar__arrow {
   display: inline-flex;
@@ -215,27 +217,33 @@ body {
     flex-direction: column;
   }
   .movie-detail__info {
-    padding: 1rem 0;
+    padding: 0 1rem !important;
   }
 }
 @media (max-width: 768px) {
   .navbar,
   .navbar-detail {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    height: 64px;
   }
-  .navbar__arrow,
-  .navbar-detail__arrow {
+  .navbar__arrow {
     position: absolute;
     left: 1rem;
     top: 50%;
     transform: translateY(-50%);
   }
+  .navbar-detail__arrow {
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+  }
   .search {
-    width: 100%;
-    padding: 0 1rem;
+    max-width: 366px;
     margin: 1rem auto;
     box-sizing: border-box;
     align-items: center;
@@ -244,8 +252,8 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 1rem;
-    padding: 3rem;
+    padding: 14px 2rem 2rem;
+    justify-content: center;
   }
   .movie-list__card {
     width: 100%;
@@ -254,11 +262,8 @@ body {
     border-radius: 12px 12px 0 0;
   }
   .movie-detail__poster img {
-    width: 100%;
-    height: auto;
-  }
-  .movie-detail {
-    padding: 1rem;
+    width: 100% !important;
+    padding: 0 !important;
   }
   .movie-detail__title {
     font-size: 1.8rem;
@@ -293,7 +298,7 @@ body {
 @media (max-width: 480px) {
   .navbar__logo,
   .navbar-detail__logo {
-    padding: 8px;
+    padding: 0;
     order: 1;
   }
 }
@@ -311,7 +316,7 @@ body {
 .navbar-detail__logo {
   cursor: pointer;
   position: relative;
-  top: 6px;
+  padding-top: 6px;
 }
 .navbar-detail__arrow {
   display: inline-flex;
@@ -338,19 +343,18 @@ body {
   max-width: 1280px;
   color: white;
   justify-content: space-between;
-  padding: 2rem 5rem;
 }
 .movie-detail__poster img {
   height: 600px;
-  width: 375.55px;
+  padding: 2rem 0 2rem 5rem;
 }
 .movie-detail__info {
-  padding: 0 2rem;
+  padding: 2rem 7rem 0 2rem;
 }
 .movie-detail__container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
+  margin: 0.5rem 0 1rem;
   height: 45px;
 }
 .movie-detail__title {
@@ -405,6 +409,7 @@ body {
 .movie-detail__rating-container {
   font-size: 1.5rem;
   color: #e4bb24;
+  text-align: right;
 }
 .movie-detail__rating-container i {
   font-size: 0.7rem;
