--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -12,7 +12,9 @@
 
     &__logo {
         cursor: pointer;
-        padding: 12px 12px;
+        padding: 12px 6px;
+        display: flex;
+        justify-content: center;
 
     }
 
