--- a/src/scss/_ressponsive.scss
+++ b/src/scss/_ressponsive.scss
@@ -13,7 +13,7 @@
         flex-direction: column;
 
         &__info {
-            padding: 1rem 0;
+            padding: 0 1rem !important;
         }
     }
 }
@@ -22,26 +22,34 @@
 
     .navbar,
     .navbar-detail {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        position: relative !important;
+        height: 64px;
 
     }
 
 
 
-    .navbar__arrow,
-    .navbar-detail__arrow {
+    .navbar__arrow {
         position: absolute;
         left: 1rem;
         top: 50%;
         transform: translateY(-50%);
     }
 
+    .navbar-detail__arrow {
+        position: absolute;
+        top: 0.5rem;
+        left: 0.5rem;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
     .search {
-        width: 100%;
-        padding: 0 1rem;
+        max-width: 366px;
+        // padding: 0 1rem;
         margin: 1rem auto;
         box-sizing: border-box;
         align-items: center;
@@ -51,8 +59,10 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 1rem;
-        padding: 3rem;
+        // gap: 1rem;
+        // padding: 0 2rem 2rem;
+        padding: 14px 2rem 2rem;
+        justify-content: center;
 
     }
 
@@ -64,12 +74,13 @@
     }
 
     .movie-detail__poster img {
-        width: 100%;
-        height: auto;
+        width: 100% !important;
+        // height: auto !important;
+        padding: 0 !important;
     }
 
     .movie-detail {
-        padding: 1rem;
+        // padding: 1rem;
 
         &__title {
             font-size: 1.8rem;
@@ -81,6 +92,7 @@
 
         &__subinfo {
             font-size: 0.7rem;
+            // padding: 3rem 3rem 0 0;
 
             div {
                 padding: 0 0.5rem;
@@ -116,7 +128,7 @@
 
     .navbar__logo,
     .navbar-detail__logo {
-        padding: 8px;
+        padding: 0;
         order: 1;
     }
 }
